--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,5 +4,13 @@
 
 .title {
   font-size: 20px;
-  padding: 20px;
+}
+
+h1 {
+  text-align: center;
+  padding-bottom: 20px;
+}
+
+.form-group {
+  padding-right: 20px;
 }
