Will they close?
gpom
gpom

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -23,3 +23,12 @@ h1 {
 .row {
   text-align: center;
 }
+
+.list-item {
+  display: inline-block;
+}
+
+.delete {
+  float: right;
+  padding-left:10px;
+}
